<resources>
    <string name="app_name">SDSUHealthMonitoring</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">SDSU Health Monitoring</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="height">Height: </string>
    <string name="weight">Weight: </string>
    <string name="CalcBMI">Calculate BMI</string>
    <string name="Feet">Feet</string>
    <string-array name="array_height">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="array_height_inches">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="array_weights">
        <item>"Kg"</item>
        <item>"Lbs"</item>
    </string-array>
    <string name="action_setting">App Settings</string>
    <string name="intro_text">Hi! Let\'s track daily cumulative steps. Use the menu to explore additional actions.</string>
    <string name="action_dump_subs">List Active Subscriptions</string>
    <string name="action_cancel_subs">Cancel subscriptions</string>
    <string name="title_activity_remainders">Remainders</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="water_quantity">Enter the water quantiy per day</string>
    <string name="water_remainder">Enter the time interval for remainder</string>
    <string name="medicine_remainder">Select time for medicine remainder</string>
    <string name="medicine_button">Set Remainder</string>
    <string name="Total_Steps">Total Steps Walked</string>
    <string name="Exercise">Enter your exercise</string>
    <string name="ExDuration">Exercise Duration</string>
    <string name="Calories">Calories Burnt</string>
    <string name="WSave">Save my Workout</string>

</resources>
