<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BMI.SDSUBMIActivity">

    <TextView
        android:id="@+id/Weight"
        android:layout_width="114dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="446dp"
        android:text="@string/weight"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Edit_Weight"
        android:layout_width="92dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="446dp"
        android:ems="10"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />

    <Spinner
        android:id="@+id/weight_spinner"
        android:layout_width="101dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="446dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:entries="@array/array_weights"/>

    <Button
        android:id="@+id/BMI_Calculator"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="280dp"
        android:text="@string/CalcBMI" />

    <!--<EditText-->
        <!--android:id="@+id/editText3"-->
        <!--android:layout_width="62dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginEnd="74dp"-->
        <!--android:layout_marginBottom="536dp"-->
        <!--android:ems="10"-->
        <!--android:inputType="textPersonName"-->
        <!--/>-->

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="87dp"
        android:layout_height="37dp"
        android:entries="@array/array_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="537dp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="97dp"
        android:layout_height="40dp"
        android:entries="@array/array_height_inches"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="541dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="114dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="532dp"
        android:text="@string/height"
        android:textStyle="bold"/>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="30dp"
        app:cardElevation="20dp">


        <!---->
<!--<TextView>-->
    <!--<android:id-->
<!--</TextView>-->
        <!--<TextView-->
            <!--android:id="@+id/textView7"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="144dp"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_marginStart="0dp"-->
            <!--android:layout_marginEnd="11dp"-->
            <!--android:layout_marginBottom="32dp"-->
            <!--android:textColor="@color/colorAccent" />-->
        <TextView
            android:id="@+id/textView7"
            android:layout_width="374dp"
            android:layout_height="156dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

</RelativeLayout>